[tool.poetry]
name = "nisdc"
version = "v23.8.0"
description = "NI Semiconductor Device Control python Support provides python APIs to develop python test programs and communicate with a device using the setup configuration exported from the Semiconductor Device Control Add-On for InstrumentStudio."
authors = ["National Instruments"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.13"
pythonnet = "3.0.3"
grpcio = "^1.43.0"
protobuf = "^5.20.1"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = ">=0.4.0"
black = "23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
